<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/neon_dialog_background">

    <ImageButton
        android:id="@+id/close_image_button"
        android:src="@drawable/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="start"
        android:layout_margin="15dp"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">

        <br.com.neon.ui.custom.ProfileImageView
            android:id="@+id/contact_image_view"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/contact_name_text_view"
            android:text="@string/fake_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/contact_phone_text_view"
            android:text="@string/fake_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:text="@string/title_value_to_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/value_edit_text"
            android:hint="@string/hint_send_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            style="@style/Neon.EditText.Decimal"/>

        <Button
            android:id="@+id/send_button"
            android:text="@string/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Neon.Button"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.5">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>