...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/history_graphic_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/history_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
...
