...
            android:gravity="center"
            android:layout_above="@id/profile_container"
            android:layout_alignParentBottom="true"
            android:padding="20dp">

            <Button
                android:id="@+id/send_money_button"
                android:text="@string/button_send_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Neon.Button"/>

            <Button
                android:id="@+id/send_history_button"
                android:text="@string/button_send_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Neon.Button"/>

...
