<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_view"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <ImageView
        android:src="@drawable/ic_smartphone_with_sad_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/try_again_button"
        android:text="@string/button_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/neon_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAllCaps="true"/>

</LinearLayout>